# corehaptics-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_smoke.rs  02_event_parameter.rs  03_dynamic_parameter.rs  04_parameter_curve.rs  05_event.rs  06_pattern.rs  07_engine.rs  08_pattern_player.rs  09_advanced_pattern_player.rs  10_async_engine.rs  11_async_players.rs
src/: advanced_player.rs  async_api.rs  capability.rs  dynamic_parameter.rs  engine.rs  error.rs  event.rs  event_parameter.rs  lib.rs  object.rs  parameter_curve.rs  pattern.rs  player.rs  types.rs
src/ffi/: advanced_player.rs  capability.rs  core.rs  engine.rs  mod.rs  pattern.rs  player.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CoreHapticsBridge/: AdvancedPatternPlayer.swift  Async.swift  Capability.swift  Core.swift  CoreHaptics.swift  DynamicParameter.swift  Engine.swift  Event.swift  EventParameter.swift  ParameterCurve.swift  Pattern.swift  PatternPlayer.swift
swift-bridge/Sources/CoreHapticsBridge/include/: CoreHapticsBridge.h
tests/: advanced_pattern_player_tests.rs  async_api_tests.rs  capability_tests.rs  dynamic_parameter_tests.rs  engine_tests.rs  event_parameter_tests.rs  event_tests.rs  parameter_curve_tests.rs  pattern_player_tests.rs  pattern_tests.rs
tests/common/: mod.rs
tests/fixtures/: minimal.ahap
