[package]
name = "corehaptics"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/corehaptics-rs"
repository = "https://github.com/doom-fish/corehaptics-rs"
description = "Safe Rust bindings for Apple's CoreHaptics framework — capabilities, engines, patterns, players, events, and parameter curves on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["haptics", "corehaptics", "macos", "audio", "apple"]
categories = ["api-bindings", "os::macos-apis", "multimedia"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "COVERAGE.md",
    "LICENSE-*",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "corehaptics"
crate-type = ["lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_smoke"

[profile.release]
debug = "full"
strip = "none"
